Fix overlap.

--- a/less/jquery.ctabs.less
+++ b/less/jquery.ctabs.less
@@ -14,7 +14,7 @@
 @tabMinWidth: 80px;
 @tabMaxWidth: 180px;
 @tabEdgeWidth: 20px;
-@overlap: 0px;
+@overlap: 20px;
 @headColor: rgba(24, 24, 24, 1.0);
 @bodyColor: rgba(234, 234, 234, 1.0);
 @tabSprite: url(/css/img/tabsprite2.png);
